@@ -3647,6 +3647,80 @@ name|pathFooBarFile
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// Verify that we can rename an EZ root
+specifier|final
+name|Path
+name|newFoo
+init|=
+operator|new
+name|Path
+argument_list|(
+name|testRoot
+argument_list|,
+literal|"newfoo"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Rename of EZ root"
+argument_list|,
+name|fs
+operator|.
+name|rename
+argument_list|(
+name|pathFoo
+argument_list|,
+name|newFoo
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Rename of EZ root failed"
+argument_list|,
+operator|!
+name|wrapper
+operator|.
+name|exists
+argument_list|(
+name|pathFoo
+argument_list|)
+operator|&&
+name|wrapper
+operator|.
+name|exists
+argument_list|(
+name|newFoo
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Verify that we can't rename an EZ root onto itself
+try|try
+block|{
+name|wrapper
+operator|.
+name|rename
+argument_list|(
+name|newFoo
+argument_list|,
+name|newFoo
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|assertExceptionContains
+argument_list|(
+literal|"are the same"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
